[package]
name = "protohackers-solutions"
version = "0.1.0"
edition = "2021"

[dependencies]
bytes = "1.4.0"
futures = "0.3.26"
itertools = "0.10.5"
regex = "1.7.3"
serde = {version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
tokio = { version = "1.24.2", features = ["full"] }
tokio-stream = "0.1.11"
tokio-util = { version = "0.7.4", features = ["full"] }
